# Pizza-Damico-steuer

./: Cargo.toml  tauri.conf.json
capabilities/: default.json
migrations/: 001_init.sql
src/: App.tsx  commands.rs  db.rs  error.rs  index.css  lib.rs  main.rs  models.rs  reports.rs  settings.rs  sync.rs
src/audit/: log.rs  mod.rs
src/components/import/: TwintImportWizard.tsx
src/components/layout/: AppShell.tsx  MonthToolbar.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ChartTooltip.tsx  ConfirmDialog.tsx  GuidanceCallout.tsx  Input.tsx  KpiCard.tsx  Modal.tsx  Select.tsx  Table.tsx  Textarea.tsx  Toast.tsx
src/domain/: closing.rs  mod.rs  mwst.rs  validation.rs
src/export/: csv.rs  excel.rs  mod.rs
src/files/: backup.rs  mod.rs  receipts.rs
src/lib/: api.ts  format.ts  i18n.ts  ocr.ts  parse.ts  types.ts
src/pages/: AuditLogPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  ExpensePage.tsx  ExportPage.tsx  IncomePage.tsx  MonthPage.tsx  ReceiptsPage.tsx  SearchPage.tsx  SettingsPage.tsx  YearPage.tsx
src/state/: appStore.ts  toastStore.ts
